samples/_failures_safe/1761429859_25ab17_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b7a2de53.c: In function ‘main’:
./samples/SAFE/__tmp_b7a2de53.c:165:12: error: missing terminating " character
  165 |     printf("Compression successful. Ratio
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_b7a2de53.c:165:5: error: expected expression at end of input
  165 |     printf("Compression successful. Ratio
      |     ^~~~~~
./samples/SAFE/__tmp_b7a2de53.c:165:5: error: expected declaration or statement at end of input
